--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.7",
     "@babel/core": "^7.13.16",
     "@babel/eslint-parser": "^7.13.14",
     "@babel/preset-env": "^7.13.15",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^16.11.7",
     "asana": "^0.18.6",
     "babelify": "^10.0.0",
     "eslint": "^7.25.0",
@@ -39,8 +39,11 @@
     "grunt-exec": "^3.0.0",
     "jest": "^27.4.7",
     "jest-chrome": "^0.7.1",
+    "jsonschema": "^1.4.0",
     "load-grunt-tasks": "^5.1.0",
     "markdown-it": "^12.2.0",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
   }
 }
