--- a/src/deviceApiCalls/schemas/runtime-configuration.json
+++ b/src/deviceApiCalls/schemas/runtime-configuration.json
@@ -53,7 +53,8 @@
         "additionalProperties": false,
         "properties": {
           "name": { "type": "string" }
-        }
+        },
+        "required": ["name"]
       }
     },
     "userPreferences": {
