--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "postinstall": "cd packages/password && npm install",
     "start": "grunt dev",
-    "build": "grunt",
+    "build": "npm run schema:generate && node scripts/bundle.mjs && npm run copy-assets",
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
     "copy-assets": "node scripts/copy-assets.js",
@@ -30,7 +30,7 @@
     "tsc": "tsc",
     "tsc:watch": "tsc --watch",
     "verify:local": "npm run lint:fix && npm run tsc && npm run test:unit && npm run test:integration",
-    "serve": "http-server -c-1 --port 3210 ./"
+    "serve": "http-server -c-1 --port 3210 integration-test"
   },
   "license": "Apache-2.0",
   "devDependencies": {
@@ -52,25 +52,19 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-standard": "^5.0.0",
     "fast-check": "^2.25.0",
-    "grunt": "^1.6.1",
-    "grunt-babel": "^8.0.0",
-    "grunt-browserify": "^6.0.0",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-eslint": "^24.3.0",
-    "grunt-exec": "^3.0.0",
     "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "jest-chrome": "^0.8.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-html-reporter": "^3.10.2",
-    "json-schema-to-typescript": "^13.1.2",
-    "load-grunt-tasks": "^5.1.0",
-    "markdown-it": "^13.0.2",
-    "playwright": "^1.41.1",
+    "json-schema-to-typescript": "^13.1.1",
+    "markdown-it": "^13.0.1",
+    "playwright": "^1.38.1",
     "through2": "^4.0.2",
     "ts-to-zod": "^3.1.3",
     "typescript": "^5.2.2",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "esbuild": "^0.17.19"
   },
   "overrides": {
     "jest-chrome": {
