--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "postinstall": "cd packages/password && npm install",
-    "start": "grunt dev",
+        "start": "chokidar 'src' -i 'src/deviceApiCalls/__generated__'  -c 'npm run build' --initial",
     "build": "npm run schema:generate && node scripts/bundle.mjs && npm run copy-assets",
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
@@ -64,7 +64,8 @@
     "ts-to-zod": "^3.1.3",
     "typescript": "^5.2.2",
     "zod": "^3.22.4",
-    "esbuild": "^0.17.19"
+    "esbuild": "^0.17.19",
+    "chokidar-cli": "^3.0.0"
   },
   "overrides": {
     "jest-chrome": {
